Add list divider by date

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -9,13 +9,17 @@
     <link href="css/ionic.app.min.css" rel="stylesheet">
 
     <!-- inject:css -->
+    <link rel="stylesheet" href="ionic.app.min.css">
+    <link rel="stylesheet" href="style.min.css">
     <link rel="stylesheet" href="css/ionic.app.min.css">
-    <link rel="stylesheet" href="css/style.min.css">
     <!-- endinject -->
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ng-cordova.min.js"></script>
+
+    <script src="lib/ionic-ion-auto-list-divider/ionic-ion-autoListDivider.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
   </head>
