Add filterBar to doencas-list view

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -13,12 +13,14 @@
     <link rel="stylesheet" href="style.min.css">
     <link rel="stylesheet" href="css/ionic.app.min.css">
     <!-- endinject -->
+    <link rel="stylesheet" href="lib/ionic-filter-bar/dist/ionic.filter.bar.min.css">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ng-cordova.min.js"></script>
 
     <script src="lib/ionic-ion-auto-list-divider/ionic-ion-autoListDivider.js"></script>
+    <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
