--- a/app/www/states/doenca-list/doenca-list.html
+++ b/app/www/states/doenca-list/doenca-list.html
@@ -6,7 +6,7 @@
             ng-click="new()"></button>
   </ion-nav-buttons>
   <ion-content>
-    <ion-refresher pulling-text="Pull to refresh" on-refresh="refresh(true)"></ion-refresher>
+    <ion-refresher pulling-text="Pull to refresh" on-refresh="refresh(true)" spinner="dots"></ion-refresher>
     <ion-list>
       <ion-item
               class="item-remove-animate item-icon-right"
