--- a/app/www/index.html
+++ b/app/www/index.html
@@ -36,17 +36,20 @@
     <script src="app.module.js"></script>
     <!-- inject:js -->
     <script src="app.config.js"></script>
+    <script src="app.constants.js"></script>
     <script src="app.controller.js"></script>
+    <script src="app.constants.js/app.constants.template.js"></script>
+    <script src="config/app.constants.template.js"></script>
     <script src="states/controllers.module.js"></script>
     <script src="states/services.js"></script>
     <script src="states/dashboard/dashboard.controller.js"></script>
     <script src="states/dashboard/dashboard.routes.js"></script>
+    <script src="states/doenca/doenca.controller.js"></script>
+    <script src="states/doenca/doenca.routes.js"></script>
     <script src="states/doenca-list/doenca-list.controller.js"></script>
     <script src="states/doenca-list/doenca-list.routes.js"></script>
     <script src="states/login/login.controller.js"></script>
     <script src="states/login/login.routes.js"></script>
-    <script src="states/doenca/doenca.controller.js"></script>
-    <script src="states/doenca/doenca.routes.js"></script>
     <script src="states/menu/menu.controller.js"></script>
     <script src="states/menu/menu.routes.js"></script>
     <!-- endinject -->
