--- a/app/www/index.html
+++ b/app/www/index.html
@@ -17,7 +17,7 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="lib/ng-cordova.min.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
 
     <script src="lib/ionic-ion-auto-list-divider/ionic-ion-autoListDivider.js"></script>
     <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.min.js"></script>
