--- a/app/www/index.html
+++ b/app/www/index.html
@@ -22,8 +22,21 @@
     <script src="lib/ionic-ion-auto-list-divider/ionic-ion-autoListDivider.js"></script>
     <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.min.js"></script>
 
+    <link href="lib/ionic-datepicker/dist/style.css" rel="stylesheet"> 
+    <!-- path to ionic/angularjs js -->
+    <script src="lib/ionic-datepicker/dist/templates.js"></script>
+    <script src="lib/ionic-datepicker/dist/ionic-datepicker.js"></script>
+
+    <link href="lib/ionic-timepicker/dist/style.css" rel="stylesheet">
+
+    <!-- path to ionic/angularjs js -->
+    <script src="lib/ionic-timepicker/dist/templates.js"></script>
+    <script src="lib/ionic-timepicker/dist/ionic-timepicker.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+
+
   </head>
 
   <body ng-app="historico-saude">
