--- a/app/www/states/doenca/doenca.html
+++ b/app/www/states/doenca/doenca.html
@@ -2,15 +2,28 @@
   <ion-content class="padding">
     <div class="list">
       <label class="item item-input item-stacked-label">
-        <span class="input-label">Nome</span>
-        <input type="text" placeholder="Nome da doença" ng-model="doenca.nome">
+        <span class="input-label">Data*</span>        
+        <ionic-datepicker idate="currentDate" disablepreviousdates="false"  disablefuturedates="false" disableddates="disabledDates" title="titleData" callback="callbackDate">
+          <button class="button button-block button-positive"> {{ currentDate | date:'dd - MM - yyyy' }} </button>
+        </ionic-datepicker>
       </label>
       <label class="item item-input item-stacked-label">
-        <span class="input-label">Sintomas</span>
+        <span class="input-label">Hora*</span>        
+        <ionic-timepicker etime="slots.epochTime" format="slots.format" step="slots.step" callback="callbackTime" >    
+          <button class="button button-block button-positive"> {{slots.epochTime}} </button>
+        </ionic-timepicker>
+        
+      </label>      
+      <label class="item item-input item-stacked-label">
+        <span class="input-label">Nome*</span>
+        <input type="text" placeholder="Nome da doença" ng-model="doenca.nome" ng-required >
+      </label>
+      <label class="item item-input item-stacked-label">
+        <span class="input-label">Sintomas*</span>
         <input type="text" placeholder="Sintomas percebidos" ng-model="doenca.sintomas">
       </label>
         <label class="item item-input item-stacked-label">
-            <span class="input-label">Tratamento</span>
+            <span class="input-label">Tratamento*</span>
             <input type="text" placeholder="Tratamento aplicado" ng-model="doenca.tratamento">
         </label>
     </div>
