Cadastro-Consulta de Dentições

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -55,6 +55,10 @@
     <script src="states/services.js"></script>
     <script src="states/dashboard/dashboard.controller.js"></script>
     <script src="states/dashboard/dashboard.routes.js"></script>
+    <script src="states/denticao/denticao.controller.js"></script>
+    <script src="states/denticao/denticao.routes.js"></script>
+    <script src="states/denticao-list/denticao-list.controller.js"></script>
+    <script src="states/denticao-list/denticao-list.routes.js"></script>
     <script src="states/doenca/doenca.controller.js"></script>
     <script src="states/doenca/doenca.routes.js"></script>
     <script src="states/doenca-list/doenca-list.controller.js"></script>
