--- a/app/www/states/menu/menu.html
+++ b/app/www/states/menu/menu.html
@@ -21,6 +21,9 @@
         <ion-item nav-clear menu-close href="#/app/doencas">
           Doenças
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/denticoes">
+          Dentições
+        </ion-item>
         <ion-item nav-clear menu-close ng-click="logout()">
           Logout
         </ion-item>
