--- a/app/www/states/doenca-list/doenca-list.html
+++ b/app/www/states/doenca-list/doenca-list.html
@@ -14,7 +14,7 @@
               auto-list-divider-value='{{doenca.data | date:"dd/MM/yyyy"}}'
               auto-list-divider-function="dividerFunction"
               ng-repeat="doenca in doencas">
-        <span class="data">{{doenca.data | date:"h:mm"}}</span>
+        <span class="data">{{doenca.data | date:"HH:mm":'UTC'}}</span>
         {{doenca.nome}}
         <i class="icon ion-chevron-right icon-accessory"></i>
         <ion-option-button class="button-energized" ng-click="edit(doenca)">
