--- a/app/www/states/doenca/doenca.html
+++ b/app/www/states/doenca/doenca.html
@@ -3,14 +3,14 @@
     <div class="list">
       <label class="item item-input item-stacked-label">
         <span class="input-label">Data*</span>
-        <ionic-datepicker idate="currentDate" disablepreviousdates="false"  disablefuturedates="false" disableddates="disabledDates" title="titleData" callback="callbackDate">
-          <button class="button button-block button-positive"> {{ currentDate | date:'dd - MM - yyyy' }} </button>
+        <ionic-datepicker idate="date" title="titleData" callback="callbackDate">
+          <button class="button button-block button-positive"> {{ date | date:'dd - MM - yyyy' }} </button>
         </ionic-datepicker>
       </label>
       <label class="item item-input item-stacked-label">
         <span class="input-label">Hora*</span>
-        <ionic-timepicker etime="slots.epochTime" format="slots.format" step="slots.step" callback="callbackTime" >
-          <button class="button button-block button-positive"> {{ slots.epochTime * 1000 | date:'HH:mm':'UTC' }} </button>
+        <ionic-timepicker etime="hora" format="slots.format" step="slots.step" callback="callbackTime" >
+          <button class="button button-block button-positive"> {{ hora * 1000 | date:'HH:mm':'UTC' }} </button>
         </ionic-timepicker>
 
       </label>
