--- a/app/www/states/login/login.html
+++ b/app/www/states/login/login.html
@@ -5,10 +5,10 @@
       <input type="email" ng-model="email" id="inputUsername" placeholder="Email"/>
     </label>
     <label class="item item-input">
-      <span class="input-label">Password</span>
-      <input type="password" ng-model="password" id="inputPassword" placeholder="Password"/>
+      <span class="input-label">Senha</span>
+      <input type="password" ng-model="senha" id="inputPassword" placeholder="Senha"/>
     </label>
   </div>
   <button class="button button-block button-balanced" ng-click="login()">Log in</button>
-  <button class="button button-block button-stable" ng-click="signUpUI()">Register</button>
+  <button class="button button-block button-stable" ng-click="signUpUI()">Registrar-se</button>
 </ion-modal-view>
