--- a/app/www/states/login/signup.html
+++ b/app/www/states/login/signup.html
@@ -1,18 +1,110 @@
 <ion-modal-view class="padding">
-  <div class="card">
-    <label class="item item-input">
-      <span class="input-label">Name</span>
-      <input type="text" ng-model="username" id="inputName" placeholder="Name"/>
-    </label>
-    <label class="item item-input">
-      <span class="input-label">Email</span>
-      <input type="email" ng-model="email" id="inputUsername" placeholder="Email"/>
-    </label>
+
+  <ion-list>
+    <ion-item class="item-positive"
+          ng-click="toggleGroup('pai')"
+          ng-class="{active: shownGroupPai}" >
+      <i class="icon" ng-class="shownGroupPai ? 'ion-minus' : 'ion-plus'"></i>
+      Pai
+    </ion-item>
+    <div ng-show="shownGroupPai">
+      <label class="item item-input">
+          <span class="input-label">Nome</span>
+          <input type="text" ng-model="pai.nome" placeholder="Name"/>
+      </label>
+      <label class="item item-input">
+          <span class="input-label">Email</span>
+          <input type="email" ng-model="pai.email" placeholder="Email"/>
+      </label>
+      <label class="item item-input">
+        <span class="input-label">Endereço</span>
+        <input type="text" ng-model="pai.endereco" placeholder="Endereço"/>
+      </label>
+        <label class="item item-input">
+            <span class="input-label">Número</span>
+            <input type="text" ng-model="pai.numero" placeholder="Número"/>
+        </label>
+        <label class="item item-input">
+            <span class="input-label">Bairro</span>
+            <input type="text" ng-model="pai.bairro" placeholder="Bairro"/>
+        </label>
+        <label class="item item-input">
+            <span class="input-label">Cidade</span>
+            <input type="text" ng-model="pai.cidade" placeholder="Cidade"/>
+        </label>
+        <label class="item item-input item-select">
+            <span class="input-label">Estado</span>
+            <select
+                    ng-model="pai.uf"
+                    ng-options="uf for uf in estados">
+            </select>
+        </label>
+        <label class="item item-input item-stacked-label">
+            <span class="input-label">Data de Nascimento</span>
+            <ionic-datepicker idate="pai.dataNascimento" title="titleData" callback="callbackDataNascimentoPai">
+                <button class="button button-block button-positive"> {{ pai.dataNascimento | date:'dd - MM - yyyy' }} </button>
+            </ionic-datepicker>
+        </label>
+        <label class="item item-input">
+            <span class="input-label">Telefone</span>
+            <input type="text" ng-model="pai.telefone" placeholder="Telefone"/>
+        </label>
+    </div>
+    <ion-item class="item-positive"
+            ng-click="toggleGroup('mae')"
+            ng-class="{active: shownGroupMae}" >
+      <i class="icon" ng-class="shownGroupMae ? 'ion-minus' : 'ion-plus'"></i>
+      Mãe
+    </ion-item>
+      <div ng-show="shownGroupMae">
+          <label class="item item-input">
+              <span class="input-label">Nome</span>
+              <input type="text" ng-model="mae.nome" placeholder="Name"/>
+          </label>
+          <label class="item item-input">
+              <span class="input-label">Email</span>
+              <input type="email" ng-model="mae.email" placeholder="Email"/>
+          </label>
+          <label class="item item-input">
+              <span class="input-label">Endereço</span>
+              <input type="text" ng-model="mae.endereco" placeholder="Endereço"/>
+          </label>
+          <label class="item item-input">
+              <span class="input-label">Número</span>
+              <input type="text" ng-model="mae.numero" placeholder="Número"/>
+          </label>
+          <label class="item item-input">
+              <span class="input-label">Bairro</span>
+              <input type="text" ng-model="mae.bairro" placeholder="Bairro"/>
+          </label>
+          <label class="item item-input">
+              <span class="input-label">Cidade</span>
+              <input type="text" ng-model="mae.cidade" placeholder="Cidade"/>
+          </label>
+          <label class="item item-input item-select">
+              <span class="input-label">Estado</span>
+              <select
+                      ng-model="mae.uf"
+                      ng-options="uf for uf in estados">
+              </select>
+          </label>
+          <label class="item item-input item-stacked-label">
+              <span class="input-label">Data de Nascimento</span>
+              <ionic-datepicker idate="mae.dataNascimento" title="titleData" callback="callbackDataNascimentoMae">
+                  <button class="button button-block button-positive"> {{ mae.dataNascimento | date:'dd - MM - yyyy' }} </button>
+              </ionic-datepicker>
+          </label>
+          <label class="item item-input">
+              <span class="input-label">Telefone</span>
+              <input type="text" ng-model="mae.telefone" placeholder="Telefone"/>
+          </label>
+      </div>
     <label class="item item-input">
       <span class="input-label">Password</span>
-      <input type="password" ng-model="password" id="inputPassword" placeholder="Password"/>
+      <input type="password" ng-model="user.senha" id="inputPassword" placeholder="Password"/>
     </label>
-  </div>
+  </ion-list>
+
   <button class="button button-block button-balanced" ng-click="signUp()">Register</button>
   <button class="button button-block button-stable" ng-click="loginUI()">Log in</button>
 </ion-modal-view>
