--- a/app/www/index.html
+++ b/app/www/index.html
@@ -65,6 +65,10 @@
     <script src="states/doenca-list/doenca-list.routes.js"></script>
     <script src="states/login/login.controller.js"></script>
     <script src="states/login/login.routes.js"></script>
+    <script src="states/medicacao/medicacao.controller.js"></script>
+    <script src="states/medicacao/medicacao.routes.js"></script>
+    <script src="states/medicacao-list/medicacao-list.controller.js"></script>
+    <script src="states/medicacao-list/medicacao-list.routes.js"></script>
     <script src="states/menu/menu.controller.js"></script>
     <script src="states/menu/menu.routes.js"></script>
     <!-- endinject -->
