--- a/app/www/states/doenca/doenca.html
+++ b/app/www/states/doenca/doenca.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Doenca">
+<ion-view view-title="Doença">
   <ion-content class="padding">
     <div class="list">
       <label class="item item-input item-stacked-label">
