--- a/app/www/states/menu/menu.html
+++ b/app/www/states/menu/menu.html
@@ -24,6 +24,9 @@
         <ion-item nav-clear menu-close href="#/app/denticoes">
           Dentições
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/medicacoes">
+          Medicações
+        </ion-item>
         <ion-item nav-clear menu-close ng-click="logout()">
           Logout
         </ion-item>
