--- a/app/www/states/medicacao-list/medicacao-list.html
+++ b/app/www/states/medicacao-list/medicacao-list.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Dentições">
+<ion-view view-title="Medicações">
   <ion-nav-buttons side="right">
     <button class="button button-icon icon ion-ios-search-strong" ng-click="showFilterBar()"></button>
     <button class="button button-icon icon"
@@ -11,18 +11,17 @@
       <ion-item
               class="item-remove-animate item-icon-right"
               auto-list-divider
-              auto-list-divider-value='{{denticao.filho.id}}'
+              auto-list-divider-value='{{medicacao.filho.id}}'
               auto-list-divider-function="dividerFunction"
-              ng-repeat="denticao in denticoes">
-        <span class="data">{{denticao.filho.nome}}</span>
-        Dente: {{denteList[denticao.dente]}} 
-        - {{denticoesList[denticao.denticao]}}        
+              ng-repeat="medicacao in medicacoes">
+        <span class="data">{{medicacao.filho.nome}}</span>
+        {{medicacao.nomeMedicamento}}         
         <i class="icon ion-chevron-right icon-accessory"></i>
-        <ion-option-button class="button-energized" ng-click="edit(denticao)">
-          Edit
+        <ion-option-button class="button-energized" ng-click="edit(medicacao)">
+          Editar
         </ion-option-button>
-        <ion-option-button class="button-assertive" ng-click="remove(denticao)">
-          Delete
+        <ion-option-button class="button-assertive" ng-click="remove(medicacao)">
+          Excluir
         </ion-option-button>
       </ion-item>
     </ion-list>
