Cadastro de Ocorrencias

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -71,6 +71,10 @@
     <script src="states/medicacao-list/medicacao-list.routes.js"></script>
     <script src="states/menu/menu.controller.js"></script>
     <script src="states/menu/menu.routes.js"></script>
+    <script src="states/ocorrencia/ocorrencia.controller.js"></script>
+    <script src="states/ocorrencia/ocorrencia.routes.js"></script>
+    <script src="states/ocorrencia-list/ocorrencia-list.controller.js"></script>
+    <script src="states/ocorrencia-list/ocorrencia-list.routes.js"></script>
     <!-- endinject -->
   </body>
 </html>
