--- a/app/www/states/menu/menu.html
+++ b/app/www/states/menu/menu.html
@@ -27,6 +27,9 @@
         <ion-item nav-clear menu-close href="#/app/medicacoes">
           Medicações
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/ocorrencias">
+          Ocorrências
+        </ion-item>
         <ion-item nav-clear menu-close ng-click="logout()">
           Logout
         </ion-item>
