--- a/app/www/states/menu/menu.html
+++ b/app/www/states/menu/menu.html
@@ -30,6 +30,9 @@
         <ion-item nav-clear menu-close href="#/app/ocorrencias">
           Ocorrências
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/consultaMedicas">
+          Consultas Médicas
+        </ion-item>
         <ion-item nav-clear menu-close ng-click="logout()">
           Logout
         </ion-item>
