--- a/app/www/states/menu/menu.html
+++ b/app/www/states/menu/menu.html
@@ -18,6 +18,9 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
+        <ion-item nav-clear menu-close href="#/app/filhos">
+          Filhos
+        </ion-item>
         <ion-item nav-clear menu-close href="#/app/doencas">
           Doenças
         </ion-item>
