--- a/app/www/states/consultaMedica/consultaMedica.html
+++ b/app/www/states/consultaMedica/consultaMedica.html
@@ -24,7 +24,11 @@
       <label class="item item-input item-stacked-label">
         <span class="input-label">Especialidade*</span>
         <input type="text" placeholder="Especialidade" ng-model="consultaMedica.especialidade" ng-required >
-      </label>            
+      </label>
+      <label class="item item-input item-stacked-label">
+        <span class="input-label">Valor*</span>
+        <input type="number" placeholder="Valor" ng-model="consultaMedica.valor" ng-required >
+      </label>                  
     </div>
     <button class="button button-block button-balanced" ng-click="save()">
       Salvar
