--- a/app/www/states/medicacao/medicacao.html
+++ b/app/www/states/medicacao/medicacao.html
@@ -19,15 +19,23 @@
       </label>      
       <label class="item item-input item-stacked-label">
         <span class="input-label">Classificação*</span>        
-        <select ng-model="medicacao.classificacao" ng-options="k as v for (k,v) in classificacaoList" ></select>
+        <select ng-model="medicacao.classificacao" ng-options="val.id as val.nome for val in classificacaoList" ></select>
       </label>
       <label class="item item-input item-stacked-label">
         <span class="input-label">Posologia*</span>
         <input type="text" placeholder="Posologia" ng-model="medicacao.posologia" ng-required >
       </label>
       <label class="item item-input item-stacked-label">
+        <span class="input-label">Princípio Ativo*</span>
+        <input type="text" placeholder="Princípio Ativo" ng-model="medicacao.principioAtivo" ng-required >
+      </label>
+      <label class="item item-input item-stacked-label">
+        <span class="input-label">Valor*</span>
+        <input type="number" placeholder="Valor" ng-model="medicacao.valor" ng-required >
+      </label>      
+      <label class="item item-input item-stacked-label">
         <span class="input-label">Eficácia*</span>        
-        <select ng-model="medicacao.eficacia" ng-options="k as v for (k,v) in eficaciaList" ></select>
+        <select ng-model="medicacao.eficacia" ng-options="val.id as val.nome for val in eficaciaList" ></select>
       </label>      
     </div>
     <button class="button button-block button-balanced" ng-click="save()">
