--- a/app/www/states/doenca/doenca.html
+++ b/app/www/states/doenca/doenca.html
@@ -2,6 +2,10 @@
   <ion-content class="padding">
     <div class="list">
       <label class="item item-input item-stacked-label">
+        <span class="input-label">Filho*</span>
+        <select ng-model="doenca.filho" ng-options="filho as filho.nome for filho in filhos" ></select>
+      </label>
+      <label class="item item-input item-stacked-label">
         <span class="input-label">Data*</span>
         <ionic-datepicker idate="date" title="titleData" callback="callbackDate">
           <button class="button button-block button-positive"> {{ date | date:'dd - MM - yyyy' }} </button>
