--- a/app/www/states/menu/menu.html
+++ b/app/www/states/menu/menu.html
@@ -36,6 +36,9 @@
         <ion-item nav-clear menu-close href="#/app/consultaMedicas">
           Consultas Médicas
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/alergias">
+          Alergias
+        </ion-item>
         <ion-item nav-clear menu-close ng-click="logout()">
           Logout
         </ion-item>
