--- a/app/www/index.html
+++ b/app/www/index.html
@@ -53,6 +53,10 @@
     <script src="app.controller.js"></script>
     <script src="states/controllers.module.js"></script>
     <script src="states/services.js"></script>
+    <script src="states/alergia/alergia.controller.js"></script>
+    <script src="states/alergia/alergia.routes.js"></script>
+    <script src="states/alergia-list/alergia-list.controller.js"></script>
+    <script src="states/alergia-list/alergia-list.routes.js"></script>
     <script src="states/consultaMedica/consultaMedica.controller.js"></script>
     <script src="states/consultaMedica/consultaMedica.routes.js"></script>
     <script src="states/consultaMedica-list/consultaMedica-list.controller.js"></script>
