Fix doenca edit

--- a/app/www/states/doenca/doenca.html
+++ b/app/www/states/doenca/doenca.html
@@ -3,7 +3,7 @@
     <div class="list">
       <label class="item item-input item-stacked-label">
         <span class="input-label">Filho*</span>
-        <select ng-model="doenca.filho" ng-options="filho as filho.nome for filho in filhos" ></select>
+        <select ng-model="doenca.filho" ng-options="filho.id as filho.nome for filho in filhos" ></select>
       </label>
       <label class="item item-input item-stacked-label">
         <span class="input-label">Data*</span>
