--- a/app/www/states/doenca-list/doenca-list.html
+++ b/app/www/states/doenca-list/doenca-list.html
@@ -11,10 +11,10 @@
       <ion-item
               class="item-remove-animate item-icon-right"
               auto-list-divider
-              auto-list-divider-value='{{doenca.data | date:"dd/MM/yyyy"}}'
+              auto-list-divider-value='{{doenca.filho.nome}}'
               auto-list-divider-function="dividerFunction"
               ng-repeat="doenca in doencas">
-        <span class="data">{{doenca.data | date:"HH:mm":'UTC'}}</span>
+        <span class="data">{{doenca.filho.nome}}</span>
         {{doenca.nome}}
         <i class="icon ion-chevron-right icon-accessory"></i>
         <ion-option-button class="button-energized" ng-click="edit(doenca)">
