--- a/app/www/states/filho-list/filho-list.html
+++ b/app/www/states/filho-list/filho-list.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Doenças">
+<ion-view view-title="Filhos">
   <ion-nav-buttons side="right">
     <button class="button button-icon icon ion-ios-search-strong" ng-click="showFilterBar()"></button>
     <button class="button button-icon icon"
