Fix Date load on edit

--- a/app/www/states/consultaMedica/consultaMedica.html
+++ b/app/www/states/consultaMedica/consultaMedica.html
@@ -3,8 +3,8 @@
     <div class="list">
       <label class="item item-input item-stacked-label">
         <span class="input-label">Data*</span>        
-        <ionic-datepicker idate="currentDate" disablepreviousdates="false"  disablefuturedates="false" disableddates="disabledDates" title="titleData" callback="callbackDate">
-          <button class="button button-block button-positive"> {{ currentDate | date:'dd - MM - yyyy' }} </button>
+        <ionic-datepicker idate="data" disablepreviousdates="false"  disablefuturedates="false" disableddates="disabledDates" title="titleData" callback="callbackDate">
+          <button class="button button-block button-positive"> {{ data | date:'dd - MM - yyyy' }} </button>
         </ionic-datepicker>
       </label>
       <label class="item item-input item-stacked-label">
