--- a/app/www/states/alergia/alergia.html
+++ b/app/www/states/alergia/alergia.html
@@ -3,8 +3,8 @@
     <div class="list">
       <label class="item item-input item-stacked-label">
         <span class="input-label">Data*</span>
-        <ionic-datepicker idate="date" title="titleData" callback="callbackDate">
-          <button class="button button-block button-positive"> {{ date | date:'dd - MM - yyyy' }} </button>
+        <ionic-datepicker idate="data" title="titleData" callback="callbackDate">
+          <button class="button button-block button-positive"> {{ data | date:'dd - MM - yyyy' }} </button>
         </ionic-datepicker>
       </label>
       <label class="item item-input item-stacked-label">
