--- a/app/www/states/ocorrencia-list/ocorrencia-list.html
+++ b/app/www/states/ocorrencia-list/ocorrencia-list.html
@@ -13,7 +13,8 @@
               auto-list-divider
               auto-list-divider-value='{{ocorrencia.filho.nome}}'
               auto-list-divider-function="dividerFunction"
-              ng-repeat="ocorrencia in ocorrencias">        
+              ng-repeat="ocorrencia in ocorrencias">
+        <span class="data">{{ocorrencia.dataHora | date:"dd/MM/yyyy HH:mm"}}</span>
         {{ocorrencia.descricao}}         
         <i class="icon ion-chevron-right icon-accessory"></i>
         <ion-option-button class="button-energized" ng-click="edit(ocorrencia)">
