Mensagem no cadastro de pais

--- a/app/www/states/login/signup.html
+++ b/app/www/states/login/signup.html
@@ -1,5 +1,9 @@
 <ion-modal-view class="padding">
-
+  <label>
+    Para realizar seu cadastro, informe os dados abaixo clicando sobre o Pai ou Mãe.
+    Não é necessário cadastrar Pai e Mãe,  você pode fazer apenas o seu cadastro.
+    Posteriormente poderá pelo sistema informar os dados do outro.
+  </label>
   <ion-list>
     <ion-item class="item-positive"
           ng-click="toggleGroup('pai')"
