--- a/app/www/states/denticao-list/denticao-list.html
+++ b/app/www/states/denticao-list/denticao-list.html
@@ -19,10 +19,10 @@
         <p>{{denticoesList[denticao.denticao]}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
         <ion-option-button class="button-energized" ng-click="edit(denticao)">
-          Edit
+          Editar
         </ion-option-button>
         <ion-option-button class="button-assertive" ng-click="remove(denticao)">
-          Delete
+          Excluir
         </ion-option-button>
       </ion-item>
     </ion-list>
