--- a/app/www/states/login/signup.html
+++ b/app/www/states/login/signup.html
@@ -104,11 +104,11 @@
           </label>
       </div>
     <label class="item item-input">
-      <span class="input-label">Password</span>
-      <input type="password" ng-model="user.senha" id="inputPassword" placeholder="Password"/>
+      <span class="input-label">Senha</span>
+      <input type="password" ng-model="user.senha" id="inputPassword" placeholder="Senha"/>
     </label>
   </ion-list>
 
-  <button class="button button-block button-balanced" ng-click="signUp()">Register</button>
-  <button class="button button-block button-stable" ng-click="loginUI()">Log in</button>
+  <button class="button button-block button-balanced" ng-click="signUp()">Registrar-se</button>
+  <button class="button button-block button-stable" ng-click="loginUI()">Entrar</button>
 </ion-modal-view>
