--- a/app/www/states/doenca-list/doenca-list.html
+++ b/app/www/states/doenca-list/doenca-list.html
@@ -18,10 +18,10 @@
         {{doenca.nome}}
         <i class="icon ion-chevron-right icon-accessory"></i>
         <ion-option-button class="button-energized" ng-click="edit(doenca)">
-          Edit
+          Editar
         </ion-option-button>
         <ion-option-button class="button-assertive" ng-click="remove(doenca)">
-          Delete
+          Excluir
         </ion-option-button>
       </ion-item>
     </ion-list>
