--- a/app/www/states/filho-list/filho-list.html
+++ b/app/www/states/filho-list/filho-list.html
@@ -14,10 +14,10 @@
         {{filho.nome}}
         <i class="icon ion-chevron-right icon-accessory"></i>
         <ion-option-button class="button-energized" ng-click="edit(filho)">
-          Edit
+          Editar
         </ion-option-button>
         <ion-option-button class="button-assertive" ng-click="remove(filho)">
-          Delete
+          Excluir
         </ion-option-button>
       </ion-item>
     </ion-list>
