--- a/app/www/states/login/login.html
+++ b/app/www/states/login/login.html
@@ -9,6 +9,6 @@
       <input type="password" ng-model="senha" id="inputPassword" placeholder="Senha" />
     </label>
   </div>
-  <button class="button button-block button-balanced" ng-click="login()">Log in</button>
+  <button class="button button-block button-balanced" ng-click="login()">Entrar</button>
   <button class="button button-block button-stable" ng-click="signUpUI()">Registrar-se</button>
 </ion-modal-view>
