--- a/app/www/states/dashboard/dashboard.html
+++ b/app/www/states/dashboard/dashboard.html
@@ -4,7 +4,7 @@
             <div class="item item-divider">Acesso ao Menu</div>
             <div class="item item-body">
                 <div>
-                    Clique no menu esquerdo superior <b>NEGRITO</b>
+                    Clique no menu esquerdo superior ou clique e arraste da esquerda para a direita
                 </div>
             </div>
         </div>        
