--- a/app/www/states/filho/filho.html
+++ b/app/www/states/filho/filho.html
@@ -18,32 +18,32 @@
         <input type="text" placeholder="Nome" ng-model="filho.nome" ng-required >
       </label>
       <label class="item item-input item-stacked-label">
-        <span class="input-label">Altura*</span>
-        <input type="number" placeholder="Altura de Nascimento" ng-model="filho.alturaNascimento">
+        <span class="input-label">Altura (cm)*</span>
+        <input type="number" placeholder="Altura de Nascimento (cm)" ng-model="filho.alturaNascimento">
       </label>
       <label class="item item-input item-stacked-label">
         <span class="input-label">Local Nascimento*</span>
         <input type="text" placeholder="Local de Nascimento" ng-model="filho.localNascimento">
       </label>
       <label class="item item-input item-stacked-label">
-        <span class="input-label">Padrinho 1*</span>
+        <span class="input-label">Padrinho 1</span>
         <input type="text" placeholder="Padrinho 1" ng-model="filho.padrinho1">
       </label>
       <label class="item item-input item-stacked-label">
-        <span class="input-label">Madrinha 1*</span>
+        <span class="input-label">Madrinha 1</span>
         <input type="text" placeholder="Madrinha 1" ng-model="filho.madrinha1">
       </label>
       <label class="item item-input item-stacked-label">
-        <span class="input-label">Padrinho 2*</span>
+        <span class="input-label">Padrinho 2</span>
         <input type="text" placeholder="Padrinho 2" ng-model="filho.padrinho2">
       </label>
       <label class="item item-input item-stacked-label">
-        <span class="input-label">Madrinha 2*</span>
+        <span class="input-label">Madrinha 2</span>
         <input type="text" placeholder="Madrinha 2" ng-model="filho.madrinha2">
       </label>
       <label class="item item-input item-stacked-label">
-        <span class="input-label">Peso*</span>
-        <input type="number" placeholder="Peso Nascimento" ng-model="filho.pesoNascimento">
+        <span class="input-label">Peso (gr)*</span>
+        <input type="number" placeholder="Peso Nascimento (gr)" ng-model="filho.pesoNascimento">
       </label>
       <label class="item item-input item-stacked-label">
         <span class="input-label">Sexo*</span>
