--- a/app/www/states/login/login.html
+++ b/app/www/states/login/login.html
@@ -1,5 +1,8 @@
 <ion-modal-view class="padding">
   <div class="card">
+    <div class="logo-image"></div>
+  </div>
+  <div class="card">
     <label class="item item-input">
       <span class="input-label">Email</span>
       <input type="email" ng-model="email" id="inputUsername" placeholder="Email" />
