--- a/app/www/states/menu/menu.html
+++ b/app/www/states/menu/menu.html
@@ -40,7 +40,7 @@
           Ocorrências
         </ion-item>
         <ion-item nav-clear menu-close ng-click="logout()">
-          Logout
+          Sair
         </ion-item>
       </ion-list>
     </ion-content>
