Fix login image

--- a/app/www/states/login/login.html
+++ b/app/www/states/login/login.html
@@ -1,5 +1,5 @@
 <ion-modal-view class="padding">
-  <div class="card">
+  <div class="logo">
     <div class="logo-image"></div>
   </div>
   <div class="card">
